--- a/a/.config/compton.conf
+++ b/a/.config/compton.conf
@@ -15,6 +15,26 @@ shadow-exclude = [
    # "class_g = 'Sample'",
 ];
 
+## blur
+# inactive-dim = 0.2;
+# inactive-dim-fixed = true;
+# blur-background = true;
+# blur-background-frame = true;
+#blur-background-fixed = false;
+
+#blur-background = false;
+#blur-background-frame = true;
+#blur-method = "kawase";
+#blur-strength = 5;
+#blur-level = 3;
+
+blur-background-exclude = [
+#	"class_g *= 'Sample'",
+#  "window_type = 'dock'",
+#  "window_type = 'desktop'"
+];
+
+## opacity
 menu-opacity = 1;
 inactive-opacity = 1;
 active-opacity = 1;
