--- a/a/.config/mpv/mpv.conf
+++ b/a/.config/mpv/mpv.conf
@@ -10,6 +10,9 @@ sub-spacing=0.3
 alang=de,deu,ger,dut,jp,jpn,en,eng
 slang=de,deu,ger
 
+[extension.mp4]
+loop-file=yes
+
 [extension.webm]
 loop-file=yes
 
