--- a/a/.config/mpv/mpv.conf
+++ b/a/.config/mpv/mpv.conf
@@ -12,6 +12,7 @@ sub-border-size=3
 sub-spacing=0.3
 alang=de,deu,ger,dut,jp,jpn,en,eng
 slang=de,deu,ger
+image-display-duration=inf
 
 [extension.mp4]
 loop-file=yes
