--- a/a/.config/mpv/mpv.conf
+++ b/a/.config/mpv/mpv.conf
@@ -11,7 +11,7 @@ sub-border-color="FF000000"
 sub-border-size=3
 sub-spacing=0.3
 alang=de,deu,ger,dut,jp,jpn,en,eng
-slang=de,deu,ger
+slang=de,deu,ger,eng
 image-display-duration=inf
 
 [extension.mp4]
